--- a/index.html
+++ b/index.html
@@ -43,13 +43,65 @@
                 
             </div>
             <div class="our-features">
-                <h3 class="feature-title"> <span id="Quick-list " class="text-light-gray">Quick list</span> <span>of Our</span> <br>
-                     <span>Features</span></h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="section-title"> <span id="Quick-list " class="text-light-gray">Quick list</span> <span>of Our</span> <br>
+                     <span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore Me</button>
             </div>
 
         </section>
+        <!-- fetures love and enjoy -->
+         <!-- some facts -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="/images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="/images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Projetcs Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="/images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+         </section>
+         <!-- our sponsors  -->
+          <section class="our-sponsors">
+            <div class="sopnsors-info">
+                <h3 class="section-title">
+                    our sponsors
+                </h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            </div>
+            <div class="sopnsor-company">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+          </section>
     </main>
     <footer>
 
